tests/NormalTests/paczka2/big_fuzzy/73140931.err
Error in line 6: AHFhKEziJ A205 59,0
Error in line 12: AHFhKEziJ S813 12,2
Error in line 15: AHFhKEziJ A205 69,6
Error in line 18: 0aAFeK S813 74,6
Error in line 26: 0aAFeK S178 0,2
Error in line 20: AHFhKEziJ S580 94,0
Error in line 23: HOpAm9eK A205 25,9
Error in line 31: HOpAm9eK S580 98,0
Error in line 45: AHFhKEziJ S813 4,9
Error in line 44: HOpAm9eK S813 42,1
Error in line 52: 0aAFeK S580 0,4
Error in line 58: vsvKääeT S813 80,2
Error in line 56: A205 S580 48,7
Error in line 66: HOpAm9eK S580 4,2
Error in line 69: wIru198 A205 52,2
Error in line 81: wIru198 S178 45,5
Error in line 83: THnhyKJ5 S580 45,1
Error in line 85: wIru198 S813 38,9
Error in line 91: wIru198 S813 50,55
Error in line 88: wIru198 S178 34,0
Error in line 99: vsvKXXeT S178 84,7
Error in line 101: vsvKXXeT S813 48,4
Error in line 113: A2]5 S178 46,7
Error in line 116: THnhyKJ5 A205 30,94
Error in line 135: 0aAFeK A205 -2,3
Error in line 132: THnhyKJ5 S813 80,3
Error in line 131: A205 S178 57,5
Error in line 128: HOpAm9eK S178 10,0
Error in line 147: A205 S813 -6,8
Error in line 140: AHFhKEziJ S813 83,9
Error in line 141: A205 S813 87,0
Error in line 174: vsvKXXeT S580 42,5
Error in line 191: vsvKXXeT Sh80 48,8
Error in line 188: vsvKXXeT S178 95,9
Error in line 197: 0aAFeK A205 300,4
Error in line 195: vsvKXXeT S580 94,1
Error in line 200: THnhyKJ5 A205 50,7
Error in line 206: THnhyKJ5 S813 178,18
Error in line 202: THnhyKJ5 S813 43,5
Error in line 226: vsvKXXeT A205 29,2
Error in line 227: vsvKXXeT S813 3,6
Error in line 235: vsvKXXeT S178 85,19
Error in line 244: wIru198 S580 44,10
Error in line 249: wIru198 S580 112,2
